--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                 <h1><a href="#"><img src="img/logo.png" alt="피코 로고"></a></h1>
                 <nav>
                     <ul id="gnb">
-                        <li><a href="#">피코마켓이란?</a></li>
-                        <li><a href="#">피코ZONE</a></li>
-                        <li><a href="#">성공경쟁력</a></li>
-                        <li><a href="#">창업안내</a></li>
-                        <li><a href="#">지점안내</a></li>
+                        <li><a href="#what">피코마켓이란?</a></li>
+                        <li><a href="#zone">피코ZONE</a></li>
+                        <li><a href="#success">성공경쟁력</a></li>
+                        <li><a href="#open">창업안내</a></li>
+                        <li><a href="#store">지점안내</a></li>
                     </ul>
                 </nav>
             </header>
@@ -492,7 +492,7 @@
         </section>
 
         <section id="store">
-            
+
         </section>
         <footer id="footer"></footer>
     </div>
