--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
             <main id="main">
                 <img class="main-cloud1" src="img/main-cloud1.png" alt="">
                 <img class="main-cloud2" src="img/main-cloud2.png" alt="">
-                <img class="main-tit" src="img/main-tit.png" alt="">
-                <img class="main-char" src="img/main-char.png" alt="">
+                <div class="main-content">
+                    <img class="main-tit" src="img/main-tit.png" alt="">
+                    <img class="main-char" src="img/main-char.png" alt="">
+                </div>
             </main>
         </div>
 
@@ -74,7 +76,17 @@
         </div>
 
         <section id="what">
-            <img src="img/img-what.png" alt="">
+            <div class="what-inner">
+                <img class="what-bg" src="img/what-box.png" alt="What is pico?">
+                <img class="what-char" src="img/what-char.png" alt="캐릭터">
+                <div class="what-txt">
+                    <h2>마트보다 똑똑한 공구마켓 PICO!</h2>
+                    <p><b>필요한 만큼만!</b> 소량부터 대량까지 유연하게</p>
+                    <p><b>복잡함은 NO!</b> 메뉴별로 한눈에 찾는 쉬운 장보기</p>
+                    <p><b>놀라운 가격!</b> 유통 마진을 줄인 알뜰 쇼핑</p>
+                    <p><b>늘 곁에!</b> 가까운 동네 상권 PICO</p>
+                </div>
+            </div>
         </section>
 
         <section id="data">
@@ -310,7 +322,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-pagination"></div>
+                <!-- <div class="swiper-pagination"></div> -->
             </div>
         </section>
 
